Removed VH and added PX for overflow issues on laptop

--- a/css/about.css
+++ b/css/about.css
@@ -9,7 +9,7 @@
 
 .about-hero-container {
     width: 100%;
-    height: 60vh;
+    height: 500px;
     display: flex;
     gap: 2%;
 }
