--- a/css/inventory.css
+++ b/css/inventory.css
@@ -10,7 +10,7 @@
 
 .invatory-hero-container {
     width: 100%;
-    height: 60vh;
+    height: 550px;
     display: flex;
     gap: 2%;
 }
