--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ body {
 
 .hero-container {
     width: 100%;
-    height: 75vh;
+    height: 750px;
     animation: heroBackground 20s infinite;
     animation-delay: 0;
 }
@@ -236,7 +236,7 @@ body {
 
 .f-container {
     width: 700px;
-    height: 49vh;
+    height: 450px;
     border-radius: 8px;
 }
 .f-container:nth-of-type(1) {
@@ -380,7 +380,7 @@ body {
 
 .models-container {
     width: 100%;
-    height: 55vh;
+    height: 550px;
     animation: modelsBackground 20s infinite;
     animation-delay: 0;
 }
@@ -688,7 +688,7 @@ body {
 @media screen and (max-width:680px) {
     .f-container {
         width: 100%;
-        height: 44vh;
+        height: 440px;
     }
     .f-container:nth-of-type(1) {
         background-position: right;
@@ -711,19 +711,19 @@ body {
 
 @media screen and (max-width:600px) {
     .f-container {
-        height: 42vh;
+        height: 420px;
     }
 }
 
 @media screen and (max-width:570px) {
     .f-container {
-        height: 38vh;
+        height: 380px;
     }
 }
 
 @media screen and (max-width:520px) {
     .f-container {
-        height: 35vh;
+        height: 350px;
     }
 }
 
@@ -742,7 +742,7 @@ body {
         padding-bottom: 10px;
     }
     .f-container {
-        height: 32vh;
+        height: 320px;
     }
     div.car-show {
         margin: 0 16px;
@@ -768,12 +768,12 @@ body {
 
 @media screen and (max-width:450px) {
     .f-container {
-        height: 28vh;
+        height: 280px;
     }
 }
 @media screen and (max-width:410px) {
     .f-container {
-        height: 24vh;
+        height: 240px;
     }
     .f-text-container h3 {
         font-size: 1rem;
@@ -796,7 +796,7 @@ body {
         font-size: 1.2rem;
     }
     .f-container {
-        height: 20vh;
+        height: 200px;
     }
     .f-text-container h3 {
         font-size: .8rem;
